--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@deepgram/sdk": "^4.11.2",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -26,10 +27,13 @@
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.460.0",
     "next": "16.0.3",
+    "next-intl": "^4.5.5",
+    "openai": "^6.9.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.50.1",
     "tailwind-merge": "^2.2.1",
+    "twilio": "^5.10.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
